# garch-model-api

./: .env.example  .gitignore  ApiClient.cpp  ApiClient.h  CMakeLists.txt  DEPLOYMENT.md  HACKATHON_README.md  MainWindow.cpp  MainWindow.h  PITCH.html  PITCH.md  QUICK_START.md  UI_README.md  build_ui.bat  build_ui.ps1  build_ui.sh  config.py  data.py  main.cpp  main.py  model.py  onchain.py  readme.md  requirements.txt  test_api.py
contracts/: VolatilityOracle.sol  hardhat.config.js  package.json
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: WalletConnect.tsx
frontend/src/lib/: wagmi.ts
scripts/: deploy.js
